<resources>
    <string name="app_name">L Tweaks System</string>
    <string name="app_about">About</string>
    <string name="app_about_summary">
\"L Tweaks System\" is my little tweaks for some Android apps, build with Android Source is necessary.\n
\n
You need restart app / system to let it work, after changing settings.\n
\n
Open source on github: \n
<a href="https://github.com/bluesky139/LTweaksSystem">https://github.com/bluesky139/LTweaksSystem</a>
    </string>
    <string name="app_send_log">Send Log</string>
    <string name="app_send_log_error">Send log error.</string>
    <string name="app_retry_after_permission_granted">Retry after permission granted.</string>
    <string name="app_save_log">Save Log</string>
    <string name="app_save_log_ok">Log is saved to %s</string>
    <string name="app_save_log_error">Save log error.</string>
    <string name="app_open_log">Open Log</string>
    <string name="app_send_mail">Send Mail</string>
    <string name="app_send_mail_description">Please describe what you did, and what happened.\nAlso attach some screenshot if possible.</string>
    <string name="app_send_to">Send To...</string>
    <string name="app_ok">OK</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_close">Close</string>
    <string name="app_delete">Delete</string>
    <string name="app_shortcut_is_created">Shortcut is created.</string>
    <string name="app_submit_issue">Submit Issue</string>
    <string name="app_error_check_mode_world_readable">Starting from Android 7.0, store mode of preferences is changed, you need enable this module in Xposed Installer and reboot once first</string>
    <string name="app_kill_hint">%s is killed.</string>
    <string name="app_bg_dexopt">Run bg-dexopt-job</string>
    <string name="uninstall_message">Detected \"%s\" is installed, it has become part of \"L Tweaks\", better to uninstall it.</string>
    <string name="uninstall_confirm">Uninstall</string>
    <string name="not_supported">Not supported.</string>
    <string name="cant_read_file">Can\'t read file.</string>
    <string name="request_failed">Request failed.</string>
    <string name="upload_failed">Upload failed.</string>
    <string name="error">Error.</string>
    <string name="all">All</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="list">List</string>
    <string name="current">Current</string>
    <string name="secure_lock_screen_not_setup">Secure lock screen hasn\'t set up.</string>
    <string name="pref_header_google">Google</string>
    <string name="pref_category_google">Google Search App</string>
    <string name="pref_google_overlay_search_to_browser">Overlay search go to browser</string>
    <string name="pref_google_overlay_search_to_browser_summary">In nova launcher or some other launcher, there\'s an option \"Search as overlay\", use browser to open search result with this option</string>
    <string name="pref_category_google_photos">Google Photos</string>
    <string name="pref_google_photos_remove_bottom_bar">Remove bottom bar</string>
    <string name="pref_google_photos_remove_bottom_bar_summary">Put them into drawer menu</string>
    <string name="pref_google_photos_hide_suggestion">Hide suggestion</string>
    <string name="pref_google_photos_hide_suggestion_summary">Hide \"Fix lighting\", \"Move to archives\", ...</string>
    <string name="pref_google_photos_share_fix">Fix image share</string>
    <string name="pref_google_photos_share_fix_summary">Sharing to WeChat is not work in some cases</string>
    <string name="pref_category_google_map">Google Map</string>
    <string name="pref_google_map_chinese">Chinese place name</string>
    <string name="pref_google_map_chinese_summary">For English system</string>
    <string name="pref_category_google_play">Google Play</string>
    <string name="pref_google_play_view_in_coolapk">Go to other markets</string>
    <string name="pref_google_play_view_in_coolapk_summary">CoolApk, ApkPure, Mobilism, App Info page of system.\nUse share function</string>
    <string name="pref_category_google_play_services">Google Play Services</string>
    <string name="pref_google_play_services_dismiss_system_update">Dismiss system update dialog</string>
    <string name="pref_category_chrome">Chrome</string>
    <string name="pref_chrome_incognito_search">Search / Open in incognito</string>
    <string name="pref_chrome_incognito_search_summary">Search in incognito with selected text, use floating menu with text selection, for Android 6.0+\nMenu \"Open in incognito\" in Chrome and Custom Tab\nLong click link menu \"Open in incognito\" in Custom Tab</string>
    <string name="pref_chrome_google_cache">View Google cached webpage</string>
    <string name="pref_chrome_google_cache_summary">Menu \"View Google cached\" in Chrome and Custom Tab</string>
    <string name="pref_chrome_wayback">Wayback Machine</string>
    <string name="pref_chrome_wayback_summary">Menu \"Wayback Machine\" in Chrome and Custom Tab</string>
    <string name="pref_chrome_archive_is">archive.is</string>
    <string name="pref_chrome_archive_is_summary">As menu</string>
    <string name="pref_chrome_go_top_or_bottom">Go top or bottom</string>
    <string name="pref_chrome_go_top_or_bottom_summary">Menu \"Go Top\" and \"Go Bottom\" in Chrome and Custom Tab</string>
    <string name="pref_chrome_open_with">Open with...</string>
    <string name="pref_chrome_open_with_summary">Open url by other supported apps</string>
    <string name="pref_chrome_ip_info">IP info</string>
    <string name="pref_chrome_ip_info_summary">Menu to lookup ip info of current website</string>
    <string name="pref_category_youtube">Youtube</string>
    <string name="pref_youtube_remove_bottom_bar">Remove bottom bar</string>
    <string name="pref_youtube_remove_bottom_bar_summary">Put them into drawer menu</string>
    <string name="pref_youtube_set_quality">Automatically set quality</string>
    <string name="pref_youtube_darken">Better dark mode</string>
    <string name="pref_youtube_darken_summary">UrlActivity will handle Youtube url, redirect to WatchWhileActivity, this main activity cost time in onCreate() with white background</string>
    <string-array name="youtube_quality_string">
        <item>Auto</item>
        <item>144p</item>
        <item>240p</item>
        <item>360p</item>
        <item>480p</item>
        <item>720p</item>
        <item>1080p</item>
        <item>1440p</item>
        <item>2160p</item>
        <item>4320p</item>
    </string-array>
    <string-array name="youtube_quality_int" translatable="false">
        <item>0</item>
        <item>144</item>
        <item>240</item>
        <item>360</item>
        <item>480</item>
        <item>720</item>
        <item>1080</item>
        <item>1440</item>
        <item>2160</item>
        <item>4320</item>
    </string-array>
    <string name="google_play_view_in_coolapk">View in CoolApk</string>
    <string name="google_play_view_in_apkpure">View in ApkPure</string>
    <string name="google_play_search_in_mobilism">Search in Mobilism</string>
    <string name="google_play_search_in_apkmirror">Search in ApkMirror</string>
    <string name="google_play_view_in_app_info">View in App Info</string>
    <string name="chrome_open_in_incognito">Open in Incognito</string>
    <string name="chrome_google_cache">View Google Cache</string>
    <string name="chrome_wayback_machine">Wayback Machine</string>
    <string name="chrome_archive_is">archive.is</string>
    <string name="chrome_go_top">Go Top</string>
    <string name="chrome_go_bottom">Go Bottom</string>
    <string name="chrome_open_with">Open With...</string>
    <string name="chrome_ip_info">IP Info</string>
    <string name="chrome_ip_domain">Domain</string>
    <string name="chrome_ip_ip">IP</string>
    <string name="chrome_ip_geo">GeoLocation</string>
    <string name="chrome_ip_isp">ISP</string>
    <string name="chrome_ip_asn">ASN</string>
    <string name="pref_header_shopping">Shopping</string>
    <string name="pref_category_alipay">Alipay</string>
    <string name="pref_alipay_fingerprint">Use fingerprint to confirm payment</string>
    <string name="pref_alipay_fingerprint_summary">Use password for first payment, then fingerprint can be used at next time</string>
    <string name="pref_category_taobao">Taobao</string>
    <string name="pref_taobao_ads">Remove fullscreen ads</string>
    <string name="pref_taobao_move_task_to_back">Back to previous app</string>
    <string name="pref_taobao_move_task_to_back_summary">If open Taobao from other app</string>
    <string name="pref_category_jd">JD</string>
    <string name="pref_jd_open_link_in_app">Open link in app</string>
    <string name="pref_jd_open_link_in_app_summary">eg. http://item.jd.com/123.html</string>
    <string name="pref_jd_history">Price history</string>
    <string name="pref_jd_history_summary">Long press share button</string>
    <string name="pref_jd_basic_share_activity">Original share activity</string>
    <string name="pref_jd_basic_share_activity_summary">Not something like \"Share Reward\", in case no \"Copy Link\" button</string>
    <string name="pref_jd_mini_program_price_history">Price history in WeChat mini program</string>
    <string name="pref_jd_mini_program_price_history_summary">Use \"Share To Friend\" button to copy item link, do same thing like copy link from native app.\n\"Share To Friend\" will not open friend list anymore</string>
    <string name="pref_jd_ads">Remove fullscreen ads</string>
    <string name="pref_jd_move_task_to_back">Back to previous app</string>
    <string name="pref_jd_move_task_to_back_summary">If open JD from other app</string>
    <string name="pref_category_smzdm">SMZDM</string>
    <string name="pref_smzdm_skip_splash">Skip splash ads</string>
    <string name="pref_category_ele">ELE</string>
    <string name="pref_ele_route_share_link">Route share link</string>
    <string name="pref_ele_route_share_link_summary">App can be opened from their share link, but it will not take you to the specified shop/food</string>
    <string name="pref_ele_address_map">Open map from shop address</string>
    <string name="pref_ele_address_map_summary">Baidu map</string>
    <string name="jd_app">JD App</string>
    <string name="jd_history">Price History</string>
    <string name="jd_history_can_not_find_item_id">Can\'t find product id.</string>
    <string name="jd_history_can_not_get_prices">Can\'t get history prices.</string>
    <string name="jd_history_highest">Highest</string>
    <string name="jd_history_lowest">Lowest</string>
    <string name="pref_header_communication">Communication</string>
    <string name="pref_category_wechat">WeChat</string>
    <string name="pref_wechat_use_incoming_ringtone">Customize incoming ringtone</string>
    <string name="pref_wechat_use_incoming_ringtone_summary">Set ringtone below</string>
    <string name="pref_wechat_set_incoming_ringtone">Set incoming ringtone</string>
    <string name="pref_wechat_remove_bottom_bar">Remove bottom bar</string>
    <string name="pref_wechat_remove_bottom_bar_summary">Put them into drawer menu\nNote: If WeChat can\'t be launched, try delete /data/data/com.tencent.mm/tinker folder, and create a same one with 000 permission.</string>
    <string name="pref_wechat_browser">Open article page in WeChat from other browsers</string>
    <string name="pref_wechat_browser_summary">Url like https://mp.weixin.qq.com/...</string>
    <string name="pref_wechat_external_browser">Open some link in external app/browser</string>
    <string name="pref_wechat_external_browser_summary">Bilibili, Douban</string>
    <string name="pref_wechat_classic_theme">Classic theme</string>
    <string name="pref_wechat_classic_theme_summary">Instead of the whole white theme</string>
</resources>