<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_google">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_google_overlay_search_to_browser"
            android:title="@string/pref_google_overlay_search_to_browser"
            android:summary="@string/pref_google_overlay_search_to_browser_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_google_photos">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_google_photos_remove_bottom_bar"
            android:title="@string/pref_google_photos_remove_bottom_bar"
            android:summary="@string/pref_google_photos_remove_bottom_bar_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_google_play">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_google_play_view_in_coolapk"
            android:title="@string/pref_google_play_view_in_coolapk"
            android:summary="@string/pref_google_play_view_in_coolapk_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_chrome">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_chrome_incognito_search"
            android:title="@string/pref_chrome_incognito_search"
            android:summary="@string/pref_chrome_incognito_search_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_chrome_google_cache"
            android:title="@string/pref_chrome_google_cache"
            android:summary="@string/pref_chrome_google_cache_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_chrome_wayback"
            android:title="@string/pref_chrome_wayback"
            android:summary="@string/pref_chrome_wayback_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_chrome_go_top_or_bottom"
            android:title="@string/pref_chrome_go_top_or_bottom"
            android:summary="@string/pref_chrome_go_top_or_bottom_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_chrome_open_with"
            android:title="@string/pref_chrome_open_with"
            android:summary="@string/pref_chrome_open_with_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_chrome_ip_info"
            android:title="@string/pref_chrome_ip_info"
            android:summary="@string/pref_chrome_ip_info_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_youtube">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_youtube_remove_bottom_bar"
            android:title="@string/pref_youtube_remove_bottom_bar"
            android:summary="@string/pref_youtube_remove_bottom_bar_summary" />
        <!--<ListPreference
            android:defaultValue="0"
            android:key="@string/key_youtube_set_quality"
            android:title="@string/pref_youtube_set_quality"
            android:entries="@array/youtube_quality_string"
            android:entryValues="@array/youtube_quality_int" />-->
    </PreferenceCategory>
</PreferenceScreen>
